--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -83,6 +83,7 @@
             <ul>
                 <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.1_eda_sweetviz.ipynb">EDA con Sweetviz</a></li>
                 <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.2_eda_ydata.ipynb">EDA con ydata</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.4_pandas_dq.ipynb">Reporte de errores en los datos con pandas_dq</a></li>
                 <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.3_cleanlab.ipynb">Reporte de errores en los datos con cleanlab</a></li>
             </ul>
           </li>
