--- a/index_EN.html
+++ b/index_EN.html
@@ -63,139 +63,137 @@
       <div class="course-info">
         <div class="image-container">
           <a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">
-            <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
-            <div class="centered-text">PROGRAMMING FOR BEGINNERS</div>
+            <img src="./assets/img/programacion.jpeg" alt="Programming" class="image">
+            <div class="centered-text">BEGINNER PROGRAMMING</div>
           </a>
         </div>
         <div class="text">
-            <p>Curso Basico de programacion en python para Principiantes.</p>
-            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">IR AL CURSO</a></li></ul>
+            <p>Basic programming course in Python for beginners.</p>
+            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">GO TO COURSE</a></li></ul>
         </div>
       </div>
     </div>
 
-    <div class="course-card">
-      <div class="course-info">
-        <div class="text">
-          <p>Curso rapido de programacion en python para Ciencia de Datos. Desde cero.</p>
-          <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">IR AL CURSO</a></li></ul>
-        </div>
-        <div class="image-container">
-          <a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">
-            <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
-            <div class="centered-text">PROGRAMACION PARA CIENCIA DE DATOS</div>
-          </a>
-        </div>
+  <div class="course-card">
+    <div class="course-info">
+      <div class="text">
+        <p>Quick programming course in Python for Data Science. From scratch.</p>
+        <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">GO TO COURSE</a></li></ul>
+      </div>
+      <div class="image-container">
+        <a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">
+          <img src="./assets/img/programacion.jpeg" alt="Programming" class="image">
+          <div class="centered-text">PROGRAMMING FOR DATA SCIENCE</div>
+        </a>
       </div>
     </div>
+  </div>
 
-    <div class="course-card">
-      <div class="course-info">
-        <div class="image-container">
-          <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">
-            <img src="./assets/img/cienciadedatos.webp" alt="Ciencia de Datos" class="image">
-            <div class="centered-text">CIENCIA DE DATOS</div>
-          </a>
-        </div>
-        <div class="text">
-          <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las 
-            herramientas de la ciencia de datos en sus respectivas actividades.</p>
-            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">IR AL CURSO</a></li></ul>
-        </div>
+  <div class="course-card">
+    <div class="course-info">
+      <div class="image-container">
+        <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">
+          <img src="./assets/img/cienciadedatos.webp" alt="Data Science" class="image">
+          <div class="centered-text">DATA SCIENCE</div>
+        </a>
+      </div>
+      <div class="text">
+        <p>Course for people from different fields and backgrounds to use data science tools in their respective activities.</p>
+          <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">GO TO COURSE</a></li></ul>
       </div>
     </div>
+  </div>
 
-    <div class="course-card">
-      <div class="course-info">
-        <div class="text">
-          <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las herramientas 
-            de deep learning en sus respectivas actividades.</p>
-            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">IR AL CURSO</a></li></ul>
-        </div>
-        <div class="image-container">
-          <a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">
-            <img src="./assets/img/ia.png" alt="Inteligencia Artificial" class="image">
-            <div class="centered-text">INTELIGENCIA ARTIFICIAL</div>
-          </a>
-        </div>
+  <div class="course-card">
+    <div class="course-info">
+      <div class="text">
+        <p>Course for people from different fields and backgrounds to use deep learning tools in their respective activities.</p>
+          <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">GO TO COURSE</a></li></ul>
+      </div>
+      <div class="image-container">
+        <a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">
+          <img src="./assets/img/ia.png" alt="Artificial Intelligence" class="image">
+          <div class="centered-text">ARTIFICIAL INTELLIGENCE</div>
+        </a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <hr class="separator">
+<hr class="separator">
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact container">
-    <div class="contact-info">
-        <h2 >Contactanos</h2>
-        <p class="contact-intro">Puedes contactar conmigo a traves de mi email o linkedin. 
-            Ademas tambien por el grupo de telegram donde puedes compartir dudas con otros estudiantes:</p>
-        <p>
-            <ul>
-              <li><a target="_blank" href="https://t.me/freecodingtour"><i class="icon fa-brands fa-telegram"></i>Grupo de Telegram</a></li>  
-              <li><a target="_blank" href="https://www.freecodingtour.com/faq/"><i class="icon fa fa-question-circle"></i>Preguntas Frecuentes</a></li>
-              <li><i class="icon fa-regular fa-envelope"></i>amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
-              <li><a target="_blank" href="https://www.linkedin.com/in/amiune/"><i class="icon fa-brands fa-linkedin"></i> Linkedin</a></li>
-            </ul>
-        </p>
-    </div>
-  </section>
+<!-- Contact Section -->
+<section id="contact" class="contact container">
+  <div class="contact-info">
+      <h2>Contact Us</h2>
+      <p class="contact-intro">You can contact me through my email or LinkedIn. 
+          Additionally, through the Telegram group where you can share doubts with other students:</p>
+      <p>
+          <ul>
+            <li><a target="_blank" href="https://t.me/freecodingtour"><i class="icon fa-brands fa-telegram"></i>Telegram Group</a></li>  
+            <li><a target="_blank" href="https://www.freecodingtour.com/faq/"><i class="icon fa fa-question-circle"></i>Frequently Asked Questions</a></li>
+            <li><i class="icon fa-regular fa-envelope"></i>amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
+            <li><a target="_blank" href="https://www.linkedin.com/in/amiune/"><i class="icon fa-brands fa-linkedin"></i> LinkedIn</a></li>
+          </ul>
+      </p>
+  </div>
+</section>
 
-  <hr class="separator">
+<hr class="separator">
 
-  <!-- About Section -->
-  <section id="about" class="about container">
-    <div class="about-info">
-        <h2 >Por que Free Coding Tour?</h2>
-        <p>
-            Como profesor de programacion e inteligencia artificial para alumnos sin conocimiento previo y
-            tambien universitarios siempre me enfrento con dos problemas: 
-            <ol>
-                <li>diferentes ritmos de aprendizaje de cada alumno</li>
-                <li>contenido nuevo constante</li>
-            </ol>
-            Este sitio intenta resolver esos problemas de la siguiente forma:
-            <ol>
-                <li>guia practica de problemas con soluciones para avanzar de forma autonoma</li>
-                <li>contenido actualizado, gratuito y en espanol para todos los alumnos, actuales y anteriores</li>
-            </ol>
-        </p>
-        <p>
-            A partir de esto surge un nuevo objetivo que es acercar este material didáctico y gratuito a los 
-            hispanohablantes ya que la mayoría de los cursos de programación gratuitos están en inglés
-            y que el avance de la computación y la inteligencia artificial hace que los sectores 
-            más vulnerables de habla hispana vayan quedando retrasados si no pueden aprender 
-            a utilizar estas nuevas herramientas. FreeCodingTour.com es un granito de arena para
-            ayudar a personas de diferentes formaciones y ambitos que quieren aprender a utilizarlas.
-        </p>
-        <p>
-            Estos cursos no son un reemplazo de otros cursos y mucho menos del acompañamiento 
-            presencial de profesores. 
-            Puedes conocer <a href="https://www.freecodingtour.com/index.html#classes">aqui</a> 
-            donde estoy dando clases presenciales en este momento.
-        </p>
-    </div>
-  </section>
+<!-- About Section -->
+<section id="about" class="about container">
+  <div class="about-info">
+      <h2>Why Free Coding Tour?</h2>
+      <p>
+          As a programming and artificial intelligence teacher for students with no prior knowledge and
+          also university students, I always face two problems: 
+          <ol>
+              <li>different learning paces of each student</li>
+              <li>constantly new content</li>
+          </ol>
+          This site tries to solve these problems in the following way:
+          <ol>
+              <li>practical guide of problems with solutions to advance independently</li>
+              <li>updated, free, and Spanish content for all students, current and past</li>
+          </ol>
+      </p>
+      <p>
+          From this, a new goal arises: to bring this educational and free material to 
+          Spanish speakers, since most free programming courses are in English,
+          and the advancement of computing and artificial intelligence means that the 
+          most vulnerable Spanish-speaking sectors are falling behind if they cannot learn 
+          to use these new tools. FreeCodingTour.com is a small contribution to
+          help people from different backgrounds and fields who want to learn to use them.
+      </p>
+      <p>
+          These courses are not a replacement for other courses, much less for the in-person 
+          support of teachers. 
+          You can find out <a href="https://www.freecodingtour.com/index.html#classes">here</a> 
+          where I am currently teaching in-person classes.
+      </p>
+  </div>
+</section>
 
-  <!-- Footer Section -->
-  <footer>
-    <div class="footer-container">
-      <div class="sitemap-section">
-        <h3>Cursos</h3>
-        <ul>
-          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">Programacion Principiantes</a></li>
-          <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programacion Ciencia de Datos</a></li>
-          <li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Ciencia de Datos</a></li>
-          <li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">Inteligencia Artificial</a></li>
+<!-- Footer Section -->
+<footer>
+  <div class="footer-container">
+    <div class="sitemap-section">
+      <h3>Courses</h3>
+      <ul>
+        <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">Beginner Programming</a></li>
+        <li><a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">Programming Data Science</a></li>
+        <li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Data Science</a></li>
+        <li><a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">Artificial Intelligence</a></li>
         </ul>
       </div>
       <div class="sitemap-section">
-        <h3>Secciones</h3>
+        <h3>Sections</h3>
         <ul>
-          <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
-          <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
-          <li><a href="https://www.freecodingtour.com/faq/">Preguntas Frecuentes</a></li>
-          <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#contact">Contact</a></li>
+          <li><a href="https://www.freecodingtour.com/links.html">Social Networks</a></li>
+          <li><a href="https://www.freecodingtour.com/faq/">FAQ</a></li>
+          <li><a href="https://www.freecodingtour.com/index.html#about">About FCT</a></li>
         </ul>
       </div>
       <div class="sitemap-section">
