--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -74,22 +74,13 @@
         <h3>Analisis y limpieza de datos (preprocesamiento):</h3>
         <ul>
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
-          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
+          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.0_graficos_seaborn.ipynb">Graficos para analisis</a>
               <ul>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
               </ul>
           </li>
-          <li>Librerias para EDA (Analisis Exploratorio de Datos)
-            <ul>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.1_eda_sweetviz.ipynb">EDA con Sweetviz</a></li>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.2_eda_ydata.ipynb">EDA con ydata</a></li>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.4_pandas_dq.ipynb">Reporte de errores en los datos con pandas_dq</a></li>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2.3_cleanlab.ipynb">Reporte de errores en los datos con cleanlab</a></li>
-            </ul>
-          </li>
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.1_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3.2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
-          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A4_fitter.ipynb">Tests de Distribuciones de Probabilidad con Fitter</a></li>
         </ul>
 
         <hr class="separator">
