--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -75,22 +75,10 @@
           <li>Arquitecturas:
               <ul>
                   
-                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E2_Convolutional_Arch.ipynb">Redes Convolucionales</a>
-                      <ul>
-                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Keras.ipynb">CNN con Keras</a></li>
-                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
-                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Pytorch_Finetuning1.ipynb">CNN Finetuning con Pytorch</a></li>
-                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_MNIST_Pytorch_Finetuning2.ipynb">CNN Finetuning 2 con Pytorch</a></li>
-                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/CNN_SnaksDB_Pytorch_Finetuning_with_Transforms.ipynb">CNN Finetuning usando Transforms con Pytorch</a></li>
-                      </ul>
-                  </li>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E2_Convolutional_Arch.ipynb">Redes Convolucionales</a></li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E3_Autoencoders_Arch.ipynb">Autoencoders</a></li>
                   <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E4_Diffusers_Arch.ipynb">Diffusers</a></li>
-                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb">Transformers</a>
-                      <ul>
-                          <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/Transformer_Finetuning.ipynb">Transformer Finetuning con Pytorch</a></li>
-                      </ul>
-                  </li>
+                  <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb">Transformers</a></li>
               </ul>
           </li>
         </ul>
