--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../../assets/css/styles.css">
-    <title>Curso Gratuito de Ciencia de Datos de FreeCodingTour.com</title>
+    <title>Curso de Ciencia de Datos de FreeCodingTour.com</title>
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
