--- a/cursos/espanol/mlops/mlops.html
+++ b/cursos/espanol/mlops/mlops.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Raleway:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../../assets/css/styles.css">
-    <title>Curso de Inteligencia Artificial de FreeCodingTour.com</title>
+    <title>Curso de MLOps de FreeCodingTour.com</title>
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
@@ -38,11 +38,12 @@
   <!-- Classes Section -->
   <section id="classes" class="classes container">
     <div class="classes-info">
-        <h1>Inteligencia Artificial Coding Tour</h1>
-        <p class="classes-intro">Curso para que personas de diferentes ambitos y 
-          formaciones puedan utilizar las herramientas del deep learning en 
-          sus respectivas actividades. Si no sabes Machine Learning 
-          comienza primero con el <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">Curso de Machine Learning</a></p>
+        <h1>MLOps Coding Tour</h1>
+        <p class="classes-intro">
+            Curso para programadores y cientificos de Datos
+            que quieren mejorar sus conocimientos en desarrollo de
+            software profesional.
+        </p>
         <h3>Contenido</h3>
         <ul>
             <li><span class="unit">Unidad 0: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/0_intro.ipynb">Introduccion</a></li>
