--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -93,6 +93,14 @@
           <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/algorithms/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
         </ul>
 
+        <hr class="separator">
+
+        <h3>Donde seguir aprendiendo? (material avanzado en ingles):</h3>
+        <ul>
+          <li><a target="_blank" href="https://aml4td.org/">Applied Machine Learning for Tabular Data</a></li>
+          <li><a target="_blank" href="https://huyenchip.com/ml-interviews-book/">Introduction to Machine Learning Interviews Book</a></li>
+        </ul>
+
     </div>
   </section>
 
