--- a/index.html
+++ b/index.html
@@ -177,6 +177,21 @@
             Puedes conocer <a href="https://www.freecodingtour.com/index.html#classes">aqui</a> 
             donde estoy dando clases presenciales en este momento.
         </p>
+        <h2>Donde seguir aprendiendo?</h2>
+        <p>
+          Hay mucho material gratuito y de excelente calidad sobre todo en ingles, 
+          incluso de universidades muy prestigiosas.
+          Aqui comparto algunos que considero muy buenos:
+          <ul>
+            <li><a target="_blank" href="https://michaelpyrcz.com/my-resources">Professor Michael J. Pyrcz, The University of Texas at Austin</a></li>
+            <li><a target="_blank" href="https://aml4td.org/">Applied Machine Learning for Tabular Data</a></li>
+            <li><a target="_blank" href="https://huyenchip.com/ml-interviews-book/">Introduction to Machine Learning Interviews Book</a></li>
+            <li><a target="_blank" href="https://atcold.github.io/NYU-AISP24/">Artificial Intelligence (AI) course at NYU by Alfredo Canziani</a></li>
+            <li><a target="_blank" href="https://probml.github.io/pml-book/">"Probabilistic Machine Learning" - a book series by Kevin Murphy</a></li>
+            <li><a target="_blank" href="https://fleuret.org/dlc/">Deep Learning course by Francois Fleuret</a></li>
+            <li><a target="_blank" href="https://web.stanford.edu/class/cs224n/">Natural Language Processing with Deep Learning at Stanford</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4">[Videos]</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW">[More Videos]</a></li>
+          </ul>
+        </p>
     </div>
   </section>
 
