--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -97,6 +97,9 @@
 
         <h3>Donde seguir aprendiendo? (material avanzado en ingles):</h3>
         <ul>
+          <li><a href="https://www.kaggle.com/learn">Kaggle Learn</a></li>
+          <li><a href="https://www.kaggle.com/competitions?hostSegmentIdFilter=8">Kaggle Playground Competitions</a></li>
+          <li><a target="_blank" href="https://michaelpyrcz.com/my-resources">Professor Michael J. Pyrcz, The University of Texas at Austin</a></li>
           <li><a target="_blank" href="https://aml4td.org/">Applied Machine Learning for Tabular Data</a></li>
           <li><a target="_blank" href="https://huyenchip.com/ml-interviews-book/">Introduction to Machine Learning Interviews Book</a></li>
         </ul>
