--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
           incluso de universidades muy prestigiosas.
           Aqui comparto algunos que considero muy buenos:
           <ul>
+            <li><a href="https://www.kaggle.com/learn">Kaggle Learn</a></li>
             <li><a target="_blank" href="https://michaelpyrcz.com/my-resources">Professor Michael J. Pyrcz, The University of Texas at Austin</a></li>
             <li><a target="_blank" href="https://aml4td.org/">Applied Machine Learning for Tabular Data</a></li>
             <li><a target="_blank" href="https://huyenchip.com/ml-interviews-book/">Introduction to Machine Learning Interviews Book</a></li>
