--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
             <li><a target="_blank" href="https://probml.github.io/pml-book/">"Probabilistic Machine Learning" - a book series by Kevin Murphy</a></li>
             <li><a target="_blank" href="https://fleuret.org/dlc/">Deep Learning course by Francois Fleuret</a></li>
             <li><a target="_blank" href="https://web.stanford.edu/class/cs224n/">Natural Language Processing with Deep Learning at Stanford</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4">[Videos]</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW">[More Videos]</a></li>
+            <li><a target="_blank" href="https://parlance-labs.com/education/">LLMs Tutorials</a></li>
           </ul>
         </p>
     </div>
