MLOps Course First Draft

--- a/cursos/espanol/mlops/mlops.html
+++ b/cursos/espanol/mlops/mlops.html
@@ -51,7 +51,15 @@
             <li><span class="unit">Unidad 2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/2_functions_and_testing.ipynb">Testing</a></li>
             <li><span class="unit">Unidad 3: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/3_docker.ipynb">Docker</a></li>
             <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/4_git.ipynb">Git</a></li>
+            <li><span class="unit">Unidad 4.1: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/4.1_git_remoto.ipynb">Git Remoto</a></li>
+            <li><span class="unit">Unidad 4.2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/4.2_ci_cd.ipynb">Integracion Continua</a></li>
             <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/5_etl_pipelines_frameworks.ipynb">Pipelines y Frameworks</a>[Opcional]</li>
+        </ul>
+
+        <h4>Donde seguir aprendiendo:</h4>
+        <ul>
+            <li><a target="_blank" href="https://harvard-edge.github.io/cs249r_book/">Machine Learning Systems at Harvard</a></li>
+            <li><a target="_blank" href="https://huyenchip.com/mlops/">MLOps guide from Chip Huyen</a></li>
         </ul>
 
     </div>
