--- a/index.html
+++ b/index.html
@@ -123,6 +123,23 @@
         </div>
       </div>
     </div>
+
+    <div class="course-card">
+      <div class="course-info">
+        <div class="image-container">
+          <a href="https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html">
+            <img src="./assets/img/pipeline.jpg" alt="MLOps" class="image">
+            <div class="centered-text">MLOps</div>
+          </a>
+        </div>
+        <div class="text">
+          <p>Curso para programadores y cientificos de Datos
+            que quieren mejorar sus conocimientos en desarrollo de
+            software profesional.</p>
+            <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html">IR AL CURSO</a></li></ul>
+        </div>
+      </div>
+    </div>
   </section>
 
   <hr class="separator">
