--- a/cursos/espanol/mlops/mlops.html
+++ b/cursos/espanol/mlops/mlops.html
@@ -40,7 +40,7 @@
     <div class="classes-info">
         <h1>MLOps Coding Tour</h1>
         <p class="classes-intro">
-            Curso para programadores y cientificos de Datos
+            Curso para programadores y cientificos de datos
             que quieren mejorar sus conocimientos en desarrollo de
             software profesional.
         </p>
@@ -53,10 +53,12 @@
             <li><span class="unit">Unidad 4: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/4_git.ipynb">Git</a></li>
             <li><span class="unit">Unidad 4.1: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/4.1_git_remoto.ipynb">Git Remoto</a></li>
             <li><span class="unit">Unidad 4.2: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/4.2_ci_cd.ipynb">Integracion Continua</a></li>
-            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/5_etl_pipelines_frameworks.ipynb">Pipelines y Frameworks</a>[Opcional]</li>
+            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/5_etl_pipelines_frameworks.ipynb">Pipelines y Frameworks</a> [Opcional]</li>
         </ul>
 
-        <h4>Donde seguir aprendiendo:</h4>
+        <hr class="separator">
+
+        <h3>Donde seguir aprendiendo? (material avanzado en ingles):</h3>
         <ul>
             <li><a target="_blank" href="https://harvard-edge.github.io/cs249r_book/">Machine Learning Systems at Harvard</a></li>
             <li><a target="_blank" href="https://huyenchip.com/mlops/">MLOps guide from Chip Huyen</a></li>
