--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     
   </section>
 
-  <section class="courses container">
+  <!--section class="courses container">
     <div style="text-align:center;">
       <iframe style="width:90%;" height="400" src="https://www.youtube.com/embed/Y51wkBWK4tA?si=LRpUBnCJad9Bp_0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-  </section>
+  </section-->
 
   <hr class="separator">
 
@@ -133,7 +133,7 @@
           </a>
         </div>
         <div class="text">
-          <p>Curso para programadores y cientificos de Datos
+          <p>Curso para programadores y cientificos de datos
             que quieren mejorar sus conocimientos en desarrollo de
             software profesional.</p>
             <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/mlops/mlops.html">IR AL CURSO</a></li></ul>
