Basic Programming image update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="course-info">
         <div class="image-container">
           <a href="https://www.freecodingtour.com/cursos/espanol/programacion_basico/programacion.html">
-            <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
+            <img src="./assets/img/basic_programming.png" alt="Programacion" class="image">
             <div class="centered-text">PROGRAMACION PRINCIPIANTES</div>
           </a>
         </div>
