--- a/index.html
+++ b/index.html
@@ -148,13 +148,11 @@
   <section id="contact" class="contact container">
     <div class="contact-info">
         <h2 >Contactanos</h2>
-        <p class="contact-intro">Puedes contactar conmigo a traves de mi email o linkedin. 
+        <p class="contact-intro">Puedes contactar conmigo a traves de mi linkedin. 
             Ademas tambien por el grupo de telegram donde puedes compartir dudas con otros estudiantes:</p>
         <p>
             <ul>
               <li><a target="_blank" href="https://t.me/freecodingtour"><i class="icon fa-brands fa-telegram"></i>Grupo de Telegram</a></li>  
-              <li><a target="_blank" href="https://www.freecodingtour.com/faq/"><i class="icon fa fa-question-circle"></i>Preguntas Frecuentes</a></li>
-              <li><i class="icon fa-regular fa-envelope"></i>amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
               <li><a target="_blank" href="https://www.linkedin.com/in/amiune/"><i class="icon fa-brands fa-linkedin"></i> Linkedin</a></li>
             </ul>
         </p>
@@ -191,14 +189,12 @@
         <p>
             Estos cursos no son un reemplazo de otros cursos y mucho menos del acompañamiento 
             presencial de profesores. 
-            Puedes conocer <a href="https://www.freecodingtour.com/index.html#classes">aqui</a> 
-            donde estoy dando clases presenciales en este momento.
         </p>
         <h4>Donde seguir aprendiendo?</h4>
         <p>
           Hay mucho material gratuito y de excelente calidad sobre todo en ingles, 
-          incluso de universidades muy prestigiosas.
-          Aqui comparto algunos que considero muy buenos:
+          incluso de universidades muy prestigiosas. En cada curso veras varias referencias 
+          y ademas aqui comparto algunos que considero muy buenos:
           <ul>
             <li><a href="https://www.kaggle.com/learn">Kaggle Learn</a></li>
             <li><a target="_blank" href="https://michaelpyrcz.com/my-resources">Professor Michael J. Pyrcz, The University of Texas at Austin</a></li>
@@ -231,7 +227,6 @@
         <ul>
           <li><a href="https://www.freecodingtour.com/index.html#contact">Dudas</a></li>
           <li><a href="https://www.freecodingtour.com/links.html">Redes Sociales</a></li>
-          <li><a href="https://www.freecodingtour.com/faq/">Preguntas Frecuentes</a></li>
           <li><a href="https://www.freecodingtour.com/index.html#about">Sobre FCT</a></li>
         </ul>
       </div>
