Add courses references

--- a/cursos/espanol/blockchain/blockchain.html
+++ b/cursos/espanol/blockchain/blockchain.html
@@ -51,6 +51,17 @@
           <li><span class="unit">Unidad 6: </span><a target="_blank" href="#">Bitcoin Scripting</a></li>
         </ul>
 
+        <h3>Donde seguir aprendiendo? (material avanzado en ingles):</h3>
+        <ul>
+            
+          <li><a href="https://ocw.mit.edu/courses/mas-s62-cryptocurrency-engineering-and-design-spring-2018/ ">Curso del MIT dictado por Neha Narula y Tadge Dryja (MIT digital currency initiative)</a></li>
+          <li><a href="https://cs251.stanford.edu/ ">Curso de Stanford dictado por Dan Boneh y Benedikt Bünz</a></li>
+          <li><a href="https://www.alchemy.com/university/courses ">Alchemy University</a></li>
+          <li><a href="https://ocw.mit.edu/courses/15-s12-blockchain-and-money-fall-2018/ ">Curso del MIT dictado por Gary Gensler (Chair de la SEC)</a></li>
+          <li><a href="https://lopp.net/pdf/princeton_bitcoin_book.pdf">Curso de Princeton dictado por Arvind Narayanan</a></li>
+          <li><a href="https://anthonyleezhang.github.io/slides.html">Slides from Anthony Lee Zhang</a></li>
+        </ul>
+
     </div>
   </section>
 
