--- a/cursos/espanol/blockchain/blockchain.html
+++ b/cursos/espanol/blockchain/blockchain.html
@@ -60,6 +60,7 @@
           <li><a href="https://ocw.mit.edu/courses/15-s12-blockchain-and-money-fall-2018/ ">Curso del MIT dictado por Gary Gensler (Chair de la SEC)</a></li>
           <li><a href="https://lopp.net/pdf/princeton_bitcoin_book.pdf">Curso de Princeton dictado por Arvind Narayanan</a></li>
           <li><a href="https://anthonyleezhang.github.io/slides.html">Slides from Anthony Lee Zhang</a></li>
+          <li><a href="https://news.ycombinator.com/item?id=41398092">Programming Zero Knowledge Proofs: From Zero to Hero</a></li>
         </ul>
 
     </div>
