--- a/cursos/espanol/mlops/mlops.html
+++ b/cursos/espanol/mlops/mlops.html
@@ -62,6 +62,7 @@
         <ul>
             <li><a target="_blank" href="https://harvard-edge.github.io/cs249r_book/">Machine Learning Systems at Harvard</a></li>
             <li><a target="_blank" href="https://huyenchip.com/mlops/">MLOps guide from Chip Huyen</a></li>
+            <li><a target="_blank" href="https://blog.davidv.dev/posts/first-contact-with-k8s/">A skeptic's first contact with Kubernetes</a></li>
         </ul>
 
     </div>
