Telegram chat removed

--- a/cursos/espanol/blockchain/blockchain.html
+++ b/cursos/espanol/blockchain/blockchain.html
@@ -61,6 +61,7 @@
           <li><a href="https://lopp.net/pdf/princeton_bitcoin_book.pdf">Curso de Princeton dictado por Arvind Narayanan</a></li>
           <li><a href="https://anthonyleezhang.github.io/slides.html">Slides from Anthony Lee Zhang</a></li>
           <li><a href="https://news.ycombinator.com/item?id=41398092">Programming Zero Knowledge Proofs: From Zero to Hero</a></li>
+          <li><a href="https://cryptobook.nakov.com/">Practical Cryptography for Developers</a>
         </ul>
 
     </div>
@@ -101,7 +102,6 @@
   </div>
 
   <script src="../../../assets/js/script.js"></script>
-  <script src="../../../assets/js/chat.js"></script>
   <script src="../../../assets/js/cookie.notice.js"></script>
 
 </body>
