--- a/index.html
+++ b/index.html
@@ -148,11 +148,9 @@
   <section id="contact" class="contact container">
     <div class="contact-info">
         <h2 >Contactanos</h2>
-        <p class="contact-intro">Puedes contactar conmigo a traves de mi linkedin. 
-            Ademas tambien por el grupo de telegram donde puedes compartir dudas con otros estudiantes:</p>
+        <p class="contact-intro">Puedes contactar conmigo a traves de mi linkedin:</p>
         <p>
-            <ul>
-              <li><a target="_blank" href="https://t.me/freecodingtour"><i class="icon fa-brands fa-telegram"></i>Grupo de Telegram</a></li>  
+            <ul> 
               <li><a target="_blank" href="https://www.linkedin.com/in/amiune/"><i class="icon fa-brands fa-linkedin"></i> Linkedin</a></li>
             </ul>
         </p>
