--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -64,6 +64,7 @@
               </ul>
             </li>
             <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_gradio.ipynb">Usando Gradio para crear una App</a></li>
+            <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/Making_LLMs_Smarter.ipynb">Haciendo a los LLMs más Inteligentes</a></li>
         </ul>
 
         <hr class="separator">
