--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -64,7 +64,8 @@
               </ul>
             </li>
             <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_gradio.ipynb">Usando Gradio para crear una App</a></li>
-            <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb">Haciendo a los LLMs más Inteligentes</a></li>
+            <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/OpenAI_Prompting.ipynb">Prompting</a></li>
+            <li><span class="unit">Unidad 8: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb">Haciendo a los LLMs más Inteligentes</a></li>
         </ul>
 
         <hr class="separator">
