--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -58,14 +58,20 @@
                 <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4.1_finetuning.ipynb">Finetuning Avanzado</a></li>
               </ul>
             </li>
-            <li><span class="unit">Unidad 5: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_obtener_vectores.ipynb">Como obtener solo los vectores</a>
+            <li>Unidad 5: Prompting
               <ul>
-                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5.1_graficar_vectores_mas3D.ipynb">Como graficar estos vectores</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/OpenAI_Prompting.ipynb">Prompting con OpenAI</a></li>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb">Prompting con Ollama</a></li>
               </ul>
             </li>
-            <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_gradio.ipynb">Usando Gradio para crear una App</a></li>
-            <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/OpenAI_Prompting.ipynb">Prompting</a></li>
-            <li><span class="unit">Unidad 8: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb">Haciendo a los LLMs más Inteligentes</a></li>
+            <li><span class="unit">Unidad 6: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb">Haciendo a los LLMs más Inteligentes</a></li>
+            <li><span class="unit">Unidad 7: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E1_obtener_vectores.ipynb">Como obtener solo los vectores</a>
+              <ul>
+                <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E2_graficar_vectores_mas3D.ipynb">Como graficar estos vectores</a></li>
+              </ul>
+            </li>
+            <li><span class="unit">Unidad 8: </span><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E3_gradio.ipynb">Usando Gradio para crear una App</a></li>
+            
         </ul>
 
         <hr class="separator">
