--- a/cursos/espanol/mlops/mlops.html
+++ b/cursos/espanol/mlops/mlops.html
@@ -63,6 +63,7 @@
             <li><a target="_blank" href="https://harvard-edge.github.io/cs249r_book/">Machine Learning Systems at Harvard</a></li>
             <li><a target="_blank" href="https://huyenchip.com/mlops/">MLOps guide from Chip Huyen</a></li>
             <li><a target="_blank" href="https://blog.davidv.dev/posts/first-contact-with-k8s/">A skeptic's first contact with Kubernetes</a></li>
+            <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/mlops/E_interesting_stuff.ipynb">Mas Articulos Interesantes</a></li>
         </ul>
 
     </div>
