--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -88,6 +88,13 @@
             <li><a target="_blank" href="https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/programacion/E6_iterators_generators.ipynb">Iteradores y Generadores</a></li>
         </ul>
 
+        <h3>Donde seguir aprendiendo? (material en ingles):</h3>
+        <ul>
+          <li><a href="https://www.acodedaily.com">Ejercicios de programaicon con dificultad progresiva (ladder)</a></li>
+          <li><a href="https://codeforces.com">CodeForces (Competencias de Programacion y Algoritmos)</a></li>
+          <li><a href="https://deitel.com/intro-to-python-for-computer-science-and-data-science/">Intro to Python® for Computer Science and Data Science: Learning to Program with AI, Big Data and the Cloud</a></li>
+        </ul>
+
     </div>
   </section>
 
