--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -103,6 +103,7 @@
           <li><a target="_blank" href="https://michaelpyrcz.com/my-resources">Professor Michael J. Pyrcz, The University of Texas at Austin</a></li>
           <li><a target="_blank" href="https://aml4td.org/">Applied Machine Learning for Tabular Data</a></li>
           <li><a target="_blank" href="https://probml.github.io/pml-book/">"Probabilistic Machine Learning" - a book series by Kevin Murphy</a></li>
+          <li><a target="_blank" href="https://candes.su.domains/teaching/">Emmanuel Candès courses at Stanford</a> </li>
         </ul>
 
     </div>
