--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -100,7 +100,7 @@
           <li><a target="_blank" href="https://fleuret.org/dlc/">Deep Learning course by Francois Fleuret</a></li>  
           <li><a target="_blank" href="https://atcold.github.io/NYU-AISP24/">Artificial Intelligence (AI) course at NYU by Alfredo Canziani</a></li>
           <li><a target="_blank" href="https://web.stanford.edu/class/cs224n/">Natural Language Processing with Deep Learning at Stanford</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4">[Videos]</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW">[More Videos]</a></li>
-          <li><a target="_blank" href="https://parlance-labs.com/education/">LLMs Tutorials</a></li>
+          <li><a target="_blank" href="https://distill.pub/2021/gnn-intro/">A Gentle Introduction to Graph Neural Networks</a></li>
         </ul>
 
     </div>
