--- a/cursos/espanol/blockchain/blockchain.html
+++ b/cursos/espanol/blockchain/blockchain.html
@@ -62,6 +62,7 @@
           <li><a href="https://anthonyleezhang.github.io/slides.html">Slides from Anthony Lee Zhang</a></li>
           <li><a href="https://news.ycombinator.com/item?id=41398092">Programming Zero Knowledge Proofs: From Zero to Hero</a></li>
           <li><a href="https://cryptobook.nakov.com/">Practical Cryptography for Developers</a>
+          <li><a href="https://hardhat.org/tutorial">Hardhat Tutorial</a></li>
         </ul>
 
     </div>
