--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -101,6 +101,9 @@
           <li><a target="_blank" href="https://atcold.github.io/NYU-AISP24/">Artificial Intelligence (AI) course at NYU by Alfredo Canziani</a></li>
           <li><a target="_blank" href="https://web.stanford.edu/class/cs224n/">Natural Language Processing with Deep Learning at Stanford</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4">[Videos]</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW">[More Videos]</a></li>
           <li><a target="_blank" href="https://distill.pub/2021/gnn-intro/">A Gentle Introduction to Graph Neural Networks</a></li>
+          <li><a target="_blank" href="https://opencv.org/university/">OpenCV University</a></li>
+          <li><a target="_blank" href="https://www.futureofai.mit.edu">MIT Future of AI</a></li>
+          <li><a target="_blank" href="https://huggingface.co/learn/agents-course/bonus-unit3/introduction">Huggingface Agents Course</a></li>
         </ul>
 
     </div>
