--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -99,6 +99,7 @@
           <li><a href="https://slds-lmu.github.io/i2dl/">Introduction to Deep Learning from LMU Munich</a></li>
           <li><a target="_blank" href="https://fleuret.org/dlc/">Deep Learning course by Francois Fleuret</a></li>  
           <li><a target="_blank" href="https://atcold.github.io/NYU-AISP24/">Artificial Intelligence (AI) course at NYU by Alfredo Canziani</a></li>
+          <li><a target="_blank" href="https://atcold.github.io/NYU-DLSP20/">Deep Learning course at NYU by Alfredo Canziani</a></li>
           <li><a target="_blank" href="https://web.stanford.edu/class/cs224n/">Natural Language Processing with Deep Learning at Stanford</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PLoROMvodv4rMFqRtEuo6SGjY4XbRIVRd4">[Videos]</a> - <a target="_blank" href="https://www.youtube.com/playlist?list=PL613dYIGMXoZ0Wl6tj8VvHaFUTAWE8fbW">[More Videos]</a></li>
           <li><a target="_blank" href="https://distill.pub/2021/gnn-intro/">A Gentle Introduction to Graph Neural Networks</a></li>
           <li><a target="_blank" href="https://opencv.org/university/">OpenCV University</a></li>
